final commit for real, made mobile view perfect, fixed captions on mobile and the picture for jamaican rooibos from some reason not working on safari on iphones

--- a/problem-set-5/homepage/styles/styles.css
+++ b/problem-set-5/homepage/styles/styles.css
@@ -13,7 +13,7 @@ img{
 }
 
 #body-container {
-  max-width: 500px;
+  max-width: 50vw;
   margin: auto;
   align-items: center;
 }
